@@ -36,6 +36,10 @@ John Emmas
   Jackdmp changes log
 ---------------------------
 
+2012-02-10 Stephane Letz  <letz@grame.fr>
+
+	* Improve libjacknet master mode.
+
 2012-02-09 Stephane Letz  <letz@grame.fr>
 
 	* In control API, UNIX like sigset_t replaced by more abstract jackctl_sigmask_t * opaque struct.
